Connect frontend to live Render backend

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
   // --- Phase 2: Backend analyzer (Flask) ---
   async function analyzeWithBackend(url) {
     try {
-      const response = await fetch("http://127.0.0.1:5000/analyze", {
+      const response = await fetch("https://phishguardian-backend.onrender.com/analyze", {
+
         method: "POST",
         headers: {
           "Content-Type": "application/json"
